--- a/src/vnadata.3
+++ b/src/vnadata.3
@@ -248,7 +248,7 @@ vnadata_alloc, vnadata_init, vnadata_alloc_and_init, vnadata_resize, vnadata_get
 .in -4n
 .\"
 .PP
-Link with \fI-lvnaconv\fP \fI-lm\fP.
+Link with \fI-lvna\fP \fI-lm\fP.
 .\"
 .SH DESCRIPTION
 These functions store and manage electrical network parameter data.
