Updated TODO file

--- a/README
+++ b/README
@@ -103,7 +103,7 @@ help on right now are:
 	  compatibility.
 	- What's missing?
 
-    - A review of the code (over 41000 lines of source code)
+    - A review of the code (nearly 50000 lines of source code)
 
     - There's also a TODO list in src/
 
