--- a/src/TODO
+++ b/src/TODO
@@ -68,6 +68,7 @@
   zero or negative numbers represent parameters, using the negative of
   the parameter handle.
 
-- Before the 1.0 release, lower-case "VNACAL" in the vnacal save file
-  and reset the version number to 1.0.  The vnacal_load function can
-  still recognize capital VNACAL versions for compatibility.
+- Before the 1.0 release, change "VNACAL" to "VNACal" in the vnacal save
+  file and reset the version number to 1.0.  Make vnacal_load 
+  recognize capital VNACAL versions for compatibility, mapping
+  old 2.0 to new 0.2 and old 3.0 to new 1.0.
