--- a/src/vnaconv.3
+++ b/src/vnaconv.3
@@ -509,13 +509,13 @@ In order to give a more detailed description of the various parameter
 matrices, we must first give a few definitions.  Let:
 .sp
 .in +4n
-A1 and A2 be the incident voltages into ports 1 and 2,
+a1 and a2 be the incident voltages into ports 1 and 2,
 .br
-B1 and B2 be the reflected voltages out of ports 1 and 2,
+b1 and b2 be the reflected voltages out of ports 1 and 2,
 .br
-V1 and V2 be the voltages at ports 1 and 2,
+v1 and v2 be the voltages at ports 1 and 2,
 .br
-I1 and I2 be the currents into ports 1 and 2, and
+i1 and i2 be the currents into ports 1 and 2, and
 .br
 Z1 and Z2 be the system impedances the device sees looking out of
 its ports.
@@ -528,7 +528,7 @@ The relationships between
 .EN
 .\}
 .el \{\
-A1, A2, B1, B2, V1, V2, I1 and I2
+a1, a2, b1, b2, v1, v2, i1 and i2
 .\}
 are:
 .sp
@@ -559,10 +559,10 @@ and * is the conjugation operator.
 .TS
 tab(;);
 l l.
-A1 = 1/2 K1 (V1 + Z1  I1); V1 = (Z1* A1 + Z1 B1) / (K1 real(Z1))
-B1 = 1/2 K1 (V1 - Z1* I1); I1 = (A1 - B1)        / (K1 real(Z1))
-A2 = 1/2 K2 (V2 + Z2  I2); V2 = (Z2* A2 + Z2 B2) / (K2 real(Z2))
-B2 = 1/2 K2 (V2 - Z2* I2); I2 = (A2 - B2)        / (K2 real(Z2))
+a1 = 1/2 K1 (v1 + Z1  i1); v1 = (Z1* a1 + Z1 b1) / (K1 real(Z1))
+b1 = 1/2 K1 (v1 - Z1* i1); i1 = (a1 - b1)        / (K1 real(Z1))
+a2 = 1/2 K2 (v2 + Z2  i2); v2 = (Z2* a2 + Z2 b2) / (K2 real(Z2))
+b2 = 1/2 K2 (v2 - Z2* i2); i2 = (a2 - b2)        / (K2 real(Z2))
 .TE
 .sp
 .nf
@@ -587,9 +587,9 @@ left [ matrix{ ccol{ { A sub 1 } above { A sub 2 } } } right ]
 .\}
 .el \{\
 .nf
-[ B1 ]   [ s11 s12 ] [ A1 ]
+[ b1 ]   [ s11 s12 ] [ a1 ]
 [    ] = [         ] [    ]
-[ B2 ]   [ s21 s22 ] [ A2 ]
+[ b2 ]   [ s21 s22 ] [ a2 ]
 .fi
 .\}
 .in -4n
@@ -608,9 +608,9 @@ left [ matrix{ ccol{ { A sub 2 } above { B sub 2 } } } right ]
 .\}
 .el \{\
 .nf
-[ B1 ]   [ t11 t12 ] [ A2 ]
+[ b1 ]   [ t11 t12 ] [ a2 ]
 [    ] = [         ] [    ]
-[ A1 ]   [ t21 t22 ] [ B2 ]
+[ a1 ]   [ t21 t22 ] [ b2 ]
 .fi
 .\}
 .sp
@@ -633,9 +633,9 @@ left [ matrix{ ccol{ { I sub 1 } above { I sub 2 } } } right ]
 .\}
 .el \{\
 .nf
-[ V1 ]   [ z11 z12 ] [ I1 ]
+[ v1 ]   [ z11 z12 ] [ i1 ]
 [    ] = [         ] [    ]
-[ V2 ]   [ z21 z22 ] [ I2 ]
+[ v2 ]   [ z21 z22 ] [ i2 ]
 .fi
 .\}
 .in -4n
@@ -654,9 +654,9 @@ left [ matrix{ ccol{ { V sub 1 } above { V sub 2 } } } right ]
 .\}
 .el \{\
 .nf
-[ I1 ]   [ y11 y12 ] [ V1 ]
+[ i1 ]   [ y11 y12 ] [ v1 ]
 [    ] = [         ] [    ]
-[ I2 ]   [ y21 y22 ] [ V2 ]
+[ i2 ]   [ y21 y22 ] [ v2 ]
 .fi
 .\}
 .in -4n
@@ -675,9 +675,9 @@ left [ matrix{ ccol{ { I sub 1 } above { V sub 2 } } } right ]
 .\}
 .el \{\
 .nf
-[ V1 ]   [ h11 h12 ] [ I1 ]
+[ v1 ]   [ h11 h12 ] [ i1 ]
 [    ] = [         ] [    ]
-[ I2 ]   [ h21 h22 ] [ V2 ]
+[ i2 ]   [ h21 h22 ] [ v2 ]
 .fi
 .\}
 .in -4n
@@ -696,9 +696,9 @@ left [ matrix{ ccol{ { V sub 1 } above { I sub 2 } } } right ]
 .\}
 .el \{\
 .nf
-[ I1 ]   [ g11 g12 ] [ V1 ]
+[ i1 ]   [ g11 g12 ] [ v1 ]
 [    ] = [         ] [    ]
-[ V2 ]   [ g21 g22 ] [ I2 ]
+[ v2 ]   [ g21 g22 ] [ i2 ]
 .fi
 .\}
 .in -4n
@@ -717,15 +717,15 @@ left [ matrix{ ccol{ { V sub 2 } above -{ I sub 2 } } } right ]
 .\}
 .el \{\
 .nf
-[ V1 ]   [ a11 a12 ] [  V2 ]
+[ v1 ]   [ a11 a12 ] [  v2 ]
 [    ] = [         ] [     ]
-[ I1 ]   [ a21 a22 ] [ -I2 ]
+[ i1 ]   [ a21 a22 ] [ -i2 ]
 .fi
 .\}
 .sp
 The \fBa\fP parameters for a cascade of two-port networks is the
 left-to-right matrix product of the \fBa\fP parameters of each successive
-stage.  Don't confuse the \fBa\fP matrix with the A1 and A2 voltages
+stage.  Don't confuse the \fBa\fP matrix with the a1 and a2 voltages
 above.
 .in -4n
 .sp
@@ -743,15 +743,15 @@ left [ matrix{ ccol{ { V sub 1 } above { I sub 1 } } } right ]
 .\}
 .el \{\
 .nf
-[  V2 ]   [ b11 b12 ] [ V1 ]
+[  v2 ]   [ b11 b12 ] [ v1 ]
 [     ] = [         ] [    ]
-[ -I2 ]   [ b21 b22 ] [ I1 ]
+[ -i2 ]   [ b21 b22 ] [ i1 ]
 .fi
 .\}
 .sp
 The \fBb\fP parameters for a cascade of two-port networks is the
 right-to-left matrix product of the \fBb\fP parameters of each successive
-stage.  Don't confuse the \fBb\fP matrix with the B1 and B2 voltages
+stage.  Don't confuse the \fBb\fP matrix with the b1 and b2 voltages
 above.
 .in -4n
 .\"
@@ -784,24 +784,6 @@ values if the conversion is nondeterministic.
 .SH EXAMPLES
 .nf
 .ft CW
-/*
- * Vector Network Analyzer Library
- * Copyright © 2020, 2021 D Scott Guthridge <scott_guthridge@rompromity.net>
- *
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published
- * by the Free Software Foundation, either version 3 of the License, or
- * (at your option) any later version.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
- * General Public License for more details.
- *
- * You should have received a copy of the GNU General Public License
- * along with this program.  If not, see <http://www.gnu.org/licenses/>.
- */
-
 #include <complex.h>
 #include <math.h>
 #include <stdio.h>
